--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -26,3 +26,12 @@ input.nosubmit {
   margin: 4px 2px;
   cursor: pointer;
 }
+
+.unclicked {
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
+}
+
+.unclicked.clicked {
+  transform: translateX(0);
+}
