💄 ✨ (UI): Made the spinner animate

--- a/app/client/src/components/styles/FileItem.css
+++ b/app/client/src/components/styles/FileItem.css
@@ -1,5 +1,5 @@
 li {
-    font-size: larger;
+    /* font-size: larger; */
     color: #fff;  
     
     
@@ -24,4 +24,15 @@ li .actions {
 
 li .actions .fa-spinner {
     font-size: 1.2em;
+    animation: spin infinite 1s linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
