💄 (UI): Added profile image to mobile navigation

--- a/app/client/src/components/styles/Navigation.css
+++ b/app/client/src/components/styles/Navigation.css
@@ -8,3 +8,10 @@
 .changeColor:hover {
 	color: rgb(2 62 138);
 }
+
+.dropdownStyle {
+	position: absolute;
+	inset: 0px auto auto 0px;
+	margin: 0px;
+	transform: translate(0px, 210px);
+}
